--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>This is the title</h1>
+    <h1 id="title">This is the title</h1>
+    <ul id="myList">
+
+    </ul>
+    <script src="script.js"></script>
 </body>
 </html>
