added image to the devVerz1 branch

--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 </head>
 <body>
     <h1 id="title">This is the title</h1>
-    <ul id="myList">
-
-    </ul>
+    <figure id="mainImg"></figure>
+    <ul id="myList"></ul>
     <script src="script.js"></script>
 </body>
 </html>
